# flutter-desktop-embedding

./: .gitignore  BUILD.gn  README-gn.md  app  build.sh  deps.sh
example_flutter/: .gitignore
linux/example/: flutter_embedder_example.cc
scripts/: archive.sh
src/: run.cc
