#flutter_engine_dir = "../../engine"
#flutter_engine_build = "host_release"

lib_dir = "linux/library"

config("flutter_embedder_config") {
  include_dirs = [
    "$lib_dir/include",
    "/usr/include/jsoncpp",
  ]
  ldflags = [
    "-lglfw",
    "-lflutter_engine",
    "-Wl,-rpath=\$ORIGIN/lib",
  ]
  lib_dirs = [
    "lib",
  ]
  libs = [
    "gtk-3",
    "gdk-3",
    "pangocairo-1.0",
    "pango-1.0",
    "atk-1.0",
    "cairo-gobject",
    "cairo",
    "gdk_pixbuf-2.0",
    "gio-2.0",
    "gobject-2.0",
    "glib-2.0",
    "epoxy",
    "X11",
    "jsoncpp",
    "GL",
  ]
}

shared_library("flutter_embedder") {
  sources = [
    "$lib_dir/src/flutter_embedder.cc",
    "$lib_dir/src/plugin_handler.cc",
  ]
  include_dirs = [
    "/usr/include/gtk-3.0",
    "/usr/include/at-spi2-atk/2.0",
    "/usr/include/at-spi-2.0",
    "/usr/include/dbus-1.0",
    "/usr/lib/x86_64-linux-gnu/dbus-1.0/include",
    "/usr/include/gio-unix-2.0",
    "/usr/include/mirclient",
    "/usr/include/mircore",
    "/usr/include/mircookie",
    "/usr/include/cairo",
    "/usr/include/pango-1.0",
    "/usr/include/harfbuzz",
    "/usr/include/atk-1.0",
    "/usr/include/pixman-1",
    "/usr/include/freetype2",
    "/usr/include/libpng12",
    "/usr/include/gdk-pixbuf-2.0",
    "/usr/include/glib-2.0",
    "/usr/lib/x86_64-linux-gnu/glib-2.0/include",
  ]
  
  public_configs = [ ":flutter_embedder_config" ]
}

executable("flutter_embedder_example") {
  sources = [
    "linux/example/flutter_embedder_example.cc",
  ]
  ldflags = [ "-shared", "-fPIC" ]
  deps = [ ":flutter_embedder" ]
}

